allow to not configure basic firewall

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -69,6 +69,7 @@
         - ipv6
 
     - name: Firewall
+      when: firewall_base_config
       ansible.builtin.import_tasks: firewall.yaml
       tags:
         - firewall
