--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -13,11 +13,14 @@ prometheus_node_exporter: false
 # comma separated list (no spaces)
 prometheus_server: ""
 
-# certificates and more
+# store certificates and more
 ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
 
 # to delete outdated additional rules
 firewall_force_reset: false
+
+# false: only iptables package is installed
+firewall_base_config: true
 
 # apt timer schedules, reboot (for deferred service) is made via cron in the following hour
 timer_hour: "{{ 12 | random(seed=inventory_hostname) }}"
