--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Install or update firewall software
+  when: not ansible_check_mode
+  ansible.builtin.apt:
+    name:
+      - iptables-persistent
+
 - name: Create firewall script
   ansible.builtin.template:
     src: "firewall-ip{{ item }}.sh.j2"
@@ -9,11 +15,7 @@
     - "v6"
   register: _fw_scripts
 
-- name: Gather state of services
-  ansible.builtin.service_facts:
-
 - name: Save iptables state
-  when: ansible_facts.services["netfilter-persistent.service"].status == "enabled"
   community.general.iptables_state:
     ip_version: "ip{{ item }}"
     state: saved
