--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -17,9 +17,10 @@
 
 - name: Prepare to enable metrics scraping
   ansible.builtin.set_fact:
-    _add_remote_service: "{{ ((metrics_port | length > 0) and (prometheus_server | length > 0)) | ternary ('ADD_REMOTE_SERVICES=' + prometheus_server + ':' + metrics_port, '') }}"
+    _add_remote_service: "{{ ((metrics_port | length > 0) and (prometheus_server | length > 0)) | ternary('ADD_REMOTE_SERVICES=' + prometheus_server + ':' + metrics_port, '') }}"
 
 - name: Start firewall scripts
+  changed_when: true
   ansible.builtin.shell:
     cmd: |
       set -euf
