--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -8,6 +8,7 @@
   with_items:
     - ipv4-rules.sh
     - ipv6-rules.sh
+  register: _torutils
 
 - name: Install or update software for Tor server firewall
   ansible.builtin.apt:
@@ -20,6 +21,7 @@
     _add_remote_service: "{{ ((metrics_port | length > 0) and (prometheus_server | length > 0)) | ternary('ADD_REMOTE_SERVICES=' + prometheus_server + ':' + metrics_port, '') }}"
 
 - name: Start firewall scripts
+  when: _torutils.changed or firewall_force_reset
   changed_when: true
   ansible.builtin.shell:
     cmd: |
