--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -3,4 +3,6 @@
   ansible.builtin.template:
     src: torrc.j2
     dest: /etc/tor/torrc
-  notify: "restart Tor"
+  notify:
+    - "restart Firewall"
+    - "restart Tor"
