--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -2,6 +2,7 @@
 - name: Info
   hosts:
     - all
+  order: sorted
   roles:
     - role: info
   tags:
@@ -10,6 +11,7 @@
 - name: Info Snowflake
   hosts:
     - snowflake
+  order: sorted
   roles:
     - role: info_snowflake
   tags:
@@ -18,6 +20,7 @@
 - name: Info Tor
   hosts:
     - tor
+  order: sorted
   roles:
     - role: info_tor
   tags:
