--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -2,6 +2,7 @@
 - name: Setup
   hosts:
     - all
+  order: shuffled
   roles:
     - role: setup
   tags:
@@ -10,6 +11,7 @@
 - name: Setup Snowflake
   hosts:
     - snowflake
+  order: shuffled
   roles:
     - role: setup_snowflake
   tags:
@@ -18,6 +20,7 @@
 - name: Setup Tor
   hosts:
     - tor
+  order: shuffled
   roles:
     - role: setup_tor
   tags:
