--- a/playbooks/roles/setup/tasks/ipv6-ionos.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-ionos.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Check for a pseudo-random choosen ipv6 address
-  when: (ansible_facts.default_ipv6.address is defined) and (_ipv6_new != ansible_facts.default_ipv6.address)
+  failed_when: _ipv6_new != ansible_facts.default_ipv6.address
   vars:
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
     _a: "{{ (ansible_facts.default_ipv6.address | split(':'))[4] | default('0') }}"
@@ -10,5 +10,5 @@
     _ipv6_new: "{{ _ipv6_prefix }}:{{ '%x' % (_a | int) }}:{{ '%x' % (_b | int) }}:{{ '%x' % (_c | int) }}:{{ '%x' % (_d | int) }}"
   ansible.builtin.debug:
     msg:
-      - "new:     {{ _ipv6_new }}"
-      - "current: {{ ansible_facts.default_ipv6.address }}"
+      - "expected: {{ _ipv6_new }}"
+      - "current:  {{ ansible_facts.default_ipv6.address }}"
