--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -10,6 +10,7 @@
       /root/ipv6-rules.sh start
 
 - name: Restart Tor
+  when: not ansible_check_mode
   listen: "restart Tor"
   ansible.builtin.service:
     name: tor
