--- a/playbooks/roles/info_tor/tasks/fingerprints.yaml
+++ b/playbooks/roles/info_tor/tasks/fingerprints.yaml
@@ -6,6 +6,7 @@
   failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
 
 - name: Set fact
+  when: not ansible_check_mode
   ansible.builtin.set_fact:
     _fingerprint: "{{ _result.stdout_lines[0] }}"
 
@@ -18,6 +19,7 @@
       failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
 
     - name: Set fact
+      when: not ansible_check_mode
       ansible.builtin.set_fact:
         _fingerprint_ed25519: "{{ _result.stdout_lines[0] }}"
 
@@ -31,5 +33,6 @@
       register: _result
 
     - name: Set fact
+      when: not ansible_check_mode
       ansible.builtin.set_fact:
         _hashed_fingerprint: "{{ _result.stdout_lines[0] }}"
