fix setup for Tor bridges (do not start DDoS firewall)

--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Start firewall scripts
+  when: bridge_distribution | length == 0
   listen: "restart Firewall"
   ansible.builtin.shell:
     cmd: |
