--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -11,7 +11,7 @@
     repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
     state: present
 
-- name: Configure Debian repository "torproject" for tor_debian_target
+- name: Configure Debian repository "torproject" for tor_debian_target "{{ tor_debian_target }}"
   when: tor_debian_target
   ansible.builtin.apt_repository:
     filename: "torproject"
