fix info for proxy

--- a/playbooks/roles/info_tor/tasks/version.yaml
+++ b/playbooks/roles/info_tor/tasks/version.yaml
@@ -4,19 +4,25 @@
 
 - name: Tor version
   changed_when: false
-  ansible.builtin.shell: |
-    tor --version |
-    grep -m 1 '^Tor version' |
-    awk '{ print $3, $4 }'
+  ansible.builtin.shell:
+    cmd: |
+      tor --version |
+      grep -m 1 '^Tor version' |
+      awk '{ print $3, $4 }'
   register: _tor
   failed_when: (_tor.stdout_lines | length != 1) or (_tor.stderr_lines | length > 0)
 
 - name: Proxy version
   changed_when: false
-  when: (bridge_distribution | length > 0) and tor_build_from_source
-  ansible.builtin.command:
-    cmd: git describe --always
-    chdir: /root/lyrebird
+  when: bridge_distribution | length > 0
+  ansible.builtin.shell:
+    cmd: |
+      if cd /root/lyrebird 2>/dev/null; then
+        git describe --always
+      else
+        obfs4proxy --version
+      fi
+    executable: /bin/bash
   register: _proxy
   failed_when: (_proxy.stdout_lines | length != 1) or (_proxy.stderr_lines | length > 0)
 
@@ -25,6 +31,6 @@
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} {{ ansible_facts.packages['tor'][0].version | default('') }} {{ ansible_facts.packages['obfs4proxy'][0].version | default('') }} tor {{ _tor.stdout_lines[0] }} lyrebird {{ _proxy.stdout_lines[0] | default('n/a') }}"
+    line: "{{ inventory_hostname }} {{ ansible_facts.packages['tor'][0].version | default('') }} {{ ansible_facts.packages['obfs4proxy'][0].version | default('') }} tor {{ _tor.stdout_lines[0] }} proxy {{ _proxy.stdout_lines[0] | default('n/a') }}"
     path: "{{ tmp_dir }}/tor_version"
     regex: "^{{ inventory_hostname }} "
