unify shell cmd

--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -1,10 +1,11 @@
 ---
 - name: Get proxy logs except clients statistic messages
   changed_when: false
-  ansible.builtin.shell: |
-    journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
-    grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' |
-    tail -n {{ log_lines }}
+  ansible.builtin.shell:
+    cmd: |
+      journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
+      grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' |
+      tail -n {{ log_lines }}
   register: _result
   failed_when: _result.stderr_lines | length > 0
 
