--- a/playbooks/roles/info_tor/tasks/clients.yaml
+++ b/playbooks/roles/info_tor/tasks/clients.yaml
@@ -1,13 +1,14 @@
 ---
 - name: Get unique clients of the (up to) last 3 days (sorted from newest to oldest)
   changed_when: false
-  ansible.builtin.shell: |
-    zgrep -h -F ' unique clients.' {{ log_notice }}.4.gz {{ log_notice }}.3.gz {{ log_notice }}.2.gz {{ log_notice }}.1 {{ log_notice }} 2>/dev/null |
-    tail -n 12 |
-    cut -f 2- -d ',' |
-    grep -Po ' \d+ ' |
-    tac |
-    xargs
+  ansible.builtin.shell:
+    cmd: |
+      zgrep -h -F ' unique clients.' {{ log_notice }}.4.gz {{ log_notice }}.3.gz {{ log_notice }}.2.gz {{ log_notice }}.1 {{ log_notice }} 2>/dev/null |
+      tail -n 12 |
+      cut -f 2- -d ',' |
+      grep -Po ' \d+ ' |
+      tac |
+      xargs
   register: _result
 
 - name: File clients
