--- a/playbooks/roles/info/tasks/firewall.yaml
+++ b/playbooks/roles/info/tasks/firewall.yaml
@@ -1,12 +1,13 @@
 ---
 - name: Get ct drops
   changed_when: false
-  ansible.builtin.shell: |
-    conntrack -S |
-      grep -v ' insert_failed=0 drop=0 ' |
-      awk '{ print $1, $5, $6 }' |
-      cut -f 2- -d ':' |
-      xargs
+  ansible.builtin.shell:
+    cmd: |
+      conntrack -S |
+        grep -v ' insert_failed=0 drop=0 ' |
+        awk '{ print $1, $5, $6 }' |
+        cut -f 2- -d ':' |
+        xargs
   register: _result
 
 - name: File ct drops
