--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -2,8 +2,10 @@
 - name: Grep system log since {{ log_system_since }}
   changed_when: false
   # rc=1 if nothing was grep'ed
-  ansible.builtin.shell: |
-    journalctl -t kernel -g 'BUG:' -g 'Call Trace:' -g 'oom-kill' -g 'RIP:' -g 'WARNING:' -g 'OOM' -g 'status=9/KILL' -g '.service: Failed' --since "{{ log_system_since }}" -q
+  ansible.builtin.shell:
+    cmd: >-
+      journalctl -t kernel -g 'BUG:' -g 'Call Trace:' -g 'oom-kill' -g 'RIP:' -g 'WARNING:' -g 'OOM'
+      -g 'status=9/KILL' -g '.service: Failed' --since "{{ log_system_since }}" -q
   register: _result
   failed_when: _result.stderr_lines | length > 0
 
