--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -1,11 +1,12 @@
 ---
 - name: Get last 30 connections (sorted from newest to oldest)
   changed_when: false
-  ansible.builtin.shell: |
-    journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
-    tail -n 30 |
-    awk '{ print $14 }' |
-    xargs
+  ansible.builtin.shell:
+    cmd: |
+      journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
+      tail -n 30 |
+      awk '{ print $14 }' |
+      xargs
   register: _result
 
 - name: File connections
