--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -1,9 +1,10 @@
 ---
 - name: Get last {{ log_lines }} lines of {{ log_warn }}
   changed_when: false
-  ansible.builtin.shell: |
-    grep -h -v -e 'opening .*log file.' -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_warn }}.1 {{ log_warn }} 2>/dev/null |
-    tail -n {{ log_lines }}
+  ansible.builtin.shell:
+    cmd: |
+      grep -h -v -e 'opening .*log file.' -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_warn }}.1 {{ log_warn }} 2>/dev/null |
+      tail -n {{ log_lines }}
   register: _result
 
 - name: Results of log-warn {{ log_lines }} last lines
