--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -16,14 +16,14 @@
     - ipv6-rules.sh
   notify: "restart Firewall"
 
-- name: Cron job to start firewall after reboot
+- name: Create cron job to start firewall after reboot
   ansible.builtin.cron:
     name: "start firewall"
     special_time: reboot
     job: "{{ add_remote_service }} /root/ipv4-rules.sh start; /root/ipv6-rules.sh start"
   notify: "restart Firewall"
 
-- name: Cron job to save ipsets
+- name: Create ron job to save ipsets
   ansible.builtin.cron:
     name: "save ipset"
     special_time: hourly
