--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -24,7 +24,7 @@
     name:
       - deb.torproject.org-keyring
 
-- name: Install or update obfs4proxy
+- name: Install or update Tor + obfs4proxy
   when: not ansible_check_mode
   ansible.builtin.apt:
     default_release: "{{ tor_debian_target | default(ansible_facts.distribution_release) }}"
