fix pattern for line end

--- a/playbooks/roles/info_tor/tasks/wellknown.yaml
+++ b/playbooks/roles/info_tor/tasks/wellknown.yaml
@@ -16,7 +16,7 @@
       ansible.builtin.lineinfile:
         line: "{{ _hashed_fingerprint }}"
         path: "{{ tmp_dir }}/hashed-bridge-rsa-fingerprint.txt"
-        insertafter: "^# {{ inventory_hostname }}$"
+        insertafter: "^# {{ inventory_hostname }}\n"
 
 - name: Wellknown for server
   when: bridge_distribution | length == 0
@@ -36,11 +36,11 @@
       ansible.builtin.lineinfile:
         line: "{{ _fingerprint }}"
         path: "{{ tmp_dir }}/rsa-fingerprint.txt"
-        insertafter: "^# {{ inventory_hostname }}$"
+        insertafter: "^# {{ inventory_hostname }}\n"
 
     - name: Ensure ED25519 fingerprint is in wellknown file
       when: not ansible_check_mode
       ansible.builtin.lineinfile:
         line: "{{ _fingerprint_ed25519 }}"
         path: "{{ tmp_dir }}/ed25519-master-pubkey.txt"
-        insertafter: "^# {{ inventory_hostname }}$"
+        insertafter: "^# {{ inventory_hostname }}\n"
