--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -3,7 +3,7 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |
-      grep -h -v -e 'opening .*log file.' -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_warn }}.1 {{ log_warn }} 2>/dev/null |
+      grep -h -v -e 'opening .*log file.' -e 'The IPv4 ORPort address 127.0.0.1 does not match' {{ log_warn }}.1 {{ log_warn }} 2>/dev/null |
       tail -n {{ log_lines }}
   register: _result
 
