--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -13,9 +13,9 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }}
-      {{ _result.json.bridges[0].bridgedb_distributor | default('n/a') }}
-      {{ _result.json.bridges[0].advertised_bandwidth | default('n/a') }}
-      running: {{ _result.json.bridges[0].running | default('n/a') }}
+      {{ _result.json.bridges[0].bridgedb_distributor | default('-') }}
+      {{ _result.json.bridges[0].advertised_bandwidth | default('-') }}
+      running: {{ _result.json.bridges[0].running | default('-') }}
       blocklist: {{ _result.json.bridges[0].blocklist | default([]) | join(',') }}"
     path: "{{ tmp_dir }}/tor_onionoo"
     regex: "^{{ inventory_hostname }} "
