--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Restart Snowflake
-  listen: "restart Snowflake"
+  listen: "Restart Snowflake"
   ansible.builtin.service:
     name: snowflake-proxy
     state: restarted
