--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -4,5 +4,5 @@
     src: torrc.j2
     dest: /etc/tor/torrc
   notify:
-    - "restart Firewall"
-    - "restart Tor"
+    - "Restart Firewall"
+    - "Restart Tor"
