--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -35,7 +35,7 @@
     mode: a+x
     remote_src: yes
   register: _lyrebird_install
-  notify: "restart Tor"
+  notify: "Restart Tor"
 
 # for systemd see CapabilityBoundingSet, NoNewPrivileges, PrivateDevices and more
 - name: Allow low port for Lyrebird
@@ -44,4 +44,4 @@
     path: /usr/bin/lyrebird
     capability: cap_net_bind_service=+ep
     state: present
-  notify: "restart Tor"
+  notify: "Restart Tor"
