--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -4,7 +4,7 @@
   ansible.builtin.apt:
     name:
       - nginx
-  notify: "restart Nginx"
+  notify: "Restart Nginx"
 
 - name: Generate host private key
   delegate_to: localhost
@@ -43,7 +43,7 @@
   ansible.builtin.copy:
     src: "{{ ssl_dir }}/keys/{{ inventory_hostname }}.key"
     dest: /etc/nginx/conf.d/
-  notify: "restart Nginx"
+  notify: "Restart Nginx"
 
 - name: Copy host certificate
   when: not ansible_check_mode
@@ -53,17 +53,17 @@
       lookup('file','{{ ssl_dir }}/certs/CA.crt')+'\n'
       }}"
     dest: "/etc/nginx/conf.d/{{ inventory_hostname }}.crt"
-  notify: "restart Nginx"
+  notify: "Restart Nginx"
 
 - name: Configure Nginx
   ansible.builtin.template:
     src: metrics.conf.j2
     dest: /etc/nginx/conf.d/metrics.conf
     mode: "0644"
-  notify: "restart Nginx"
+  notify: "Restart Nginx"
 
 - name: Remove Nginx default listener
   ansible.builtin.file:
     path: /etc/nginx/sites-enabled/default
     state: absent
-  notify: "restart Nginx"
+  notify: "Restart Nginx"
