--- a/playbooks/roles/setup_tor/tasks/firewall-server.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-server.yaml
@@ -14,14 +14,14 @@
   with_items:
     - ipv4-rules.sh
     - ipv6-rules.sh
-  notify: "restart Firewall"
+  notify: "Restart Firewall"
 
 - name: Create cron job to start firewall after reboot
   ansible.builtin.cron:
     name: "start firewall"
     special_time: reboot
     job: "{{ add_remote_service }} /root/ipv4-rules.sh start; /root/ipv6-rules.sh start"
-  notify: "restart Firewall"
+  notify: "Restart Firewall"
 
 - name: Create ron job to save ipsets
   ansible.builtin.cron:
