--- a/playbooks/roles/setup_tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-debian.yaml
@@ -32,7 +32,7 @@
       - tor
       - tor-geoipdb
       - obfs4proxy
-  notify: "restart Tor"
+  notify: "Restart Tor"
 
 # https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1021911
 - name: Allow low port
@@ -59,7 +59,7 @@
         block: |
           [Service]
           NoNewPrivileges=no
-      notify: "restart Tor"
+      notify: "Restart Tor"
 
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
@@ -67,4 +67,4 @@
     value: "0" # Debian  bookworm default: 14886
     sysctl_file: /etc/sysctl.d/21tor-relay.conf
     sysctl_set: true
-  notify: "restart Tor"
+  notify: "Restart Tor"
