--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -5,6 +5,12 @@
   tags:
     - always
 
+- name: Validate
+  ansible.builtin.import_tasks: validate.yaml
+  tags:
+    - always
+    - validate
+
 - name: "Ensure that tmp dir does exist: {{ tmp_dir }}"
   ansible.builtin.file:
     path: "{{ tmp_dir }}"
