add a hint to renew DHCP address

--- a/playbooks/roles/setup/tasks/ipv6-ionos.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-ionos.yaml
@@ -12,3 +12,4 @@
     msg:
       - "expected: {{ _ipv6_new }}"
       - "current:  {{ ansible_facts.default_ipv6.address }}"
+      - "service systemd-networkd reload"
