DHCP renew needs a restart instead a reload

--- a/playbooks/roles/setup/tasks/ipv6-ionos.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-ionos.yaml
@@ -12,4 +12,4 @@
     msg:
       - "expected: {{ _ipv6_new }}"
       - "current:  {{ ansible_facts.default_ipv6.address }}"
-      - "service systemd-networkd reload"
+      - "service systemd-networkd restart"
