--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -67,3 +67,20 @@
     path: /etc/nginx/sites-enabled/default
     state: absent
   notify: "Restart Nginx"
+
+- name: Prometheus node exporter
+  when: prometheus_node_exporter
+  block:
+    - name: Install Prometheus node exporter
+      ansible.builtin.apt:
+        name:
+          - prometheus-node-exporter
+      notify: "Restart Prometheus node exporter"
+
+    - name: Configure Prometheus node exporter
+      ansible.builtin.lineinfile:
+        create: no
+        line: 'ARGS="--web.listen-address=127.0.0.1:9100"'
+        path: /etc/default/prometheus-node-exporter
+        regex: "^ARGS="
+      notify: "Restart Prometheus node exporter"
